@@ -6,7 +6,7 @@ my $t      = Test::Mojo::IRC->new;
 my $server = $t->start_server;
 my $irc    = Mojo::IRC->new(server => $server);
 my $err    = '';
-my ($message, %got);
+my ($message, @any, %got);
 
 isa_ok($irc, 'Mojo::IRC', 'Constructor returns right object');
 $irc->nick('test123');
@@ -14,10 +14,11 @@ is $irc->nick, 'test123', 'nick setter works';
 $irc->user('my name');
 is $irc->server, $server, 'server setter works';
 
+$irc->on(irc_any => sub { push @any, $_[1] });
 $irc->on(irc_join => sub { (my $self, $message) = @_; Mojo::IOLoop->stop; });
 $irc->on(irc_rpl_motdstart => sub { $got{rpl_motdstart}++ });
 $irc->on(irc_rpl_motd      => sub { $got{rpl_motd}++ });
-$irc->on(irc_rpl_endofmotd => sub { $got{rpl_endofmotd}++ });
+$irc->on(irc_rpl_endofmotd => sub { shift->track_any(1); $got{rpl_endofmotd}++ });
 
 $t->run(
   [qr{\bNICK\b} => \'t/data/welcome', qr{\bJOIN\b} => \'t/data/join.mojo'],
@@ -37,5 +38,6 @@ is $got{rpl_endofmotd}, 1,  'endofmotd event';
 
 #is $read, "NICK test123\r\nUSER my name 8 * :Mojo IRC\r\nJOIN #mojo\r\n", 'nick, user and join got sent';
 is + ($err || ''), '', 'no error';
+is @any, 3, 'track_any';
 
 done_testing;
